dist/overseerr/Deployment.seerr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/managed-by: generators
    app.kubernetes.io/name: seerr
  name: seerr
  namespace: overseerr
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: seerr-app-seerr-app-deployment-c84f0b12
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: seerr
        cdk8s.io/metadata.addr: seerr-app-seerr-app-deployment-c84f0b12
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: TZ
              value: America/Chicago
          image: ghcr.io/seerr-team/seerr:latest
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            tcpSocket:
              port: 5055
          name: seerr
          ports:
            - containerPort: 5055
          readinessProbe:
            failureThreshold: 3
            tcpSocket:
              port: 5055
          resources:
            limits:
              cpu: 850m
              memory: 512Mi
            requests:
              cpu: 50m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: false
            runAsGroup: 1000
            runAsNonRoot: true
            runAsUser: 1000
            seccompProfile:
              type: RuntimeDefault
          startupProbe:
            failureThreshold: 30
            periodSeconds: 5
            tcpSocket:
              port: 5055
          volumeMounts:
            - mountPath: /app/config
              name: pvc-config
      dnsConfig:
        nameservers:
          - 10.0.10.100
          - 10.0.10.101
        searches:
          - cmdcentral.xyz
      dnsPolicy: None
      hostNetwork: false
      restartPolicy: Always
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      setHostnameAsFQDN: false
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
      volumes:
        - name: pvc-config
          persistentVolumeClaim:
            claimName: config
            readOnly: false
