dist/overseerr/Service.seerr.yaml
apiVersion: v1
kind: Service
metadata:
  name: seerr
  namespace: overseerr
spec:
  externalIPs: []
  ports:
    - name: http
      port: 5055
      targetPort: 5055
  selector:
    cdk8s.io/metadata.addr: seerr-app-seerr-app-deployment-c84f0b12
  type: ClusterIP
