dist/overseerr/Ingress.seerr.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  labels:
    cmdcentral.xyz/external: "true"
  name: seerr
  namespace: overseerr
spec:
  rules:
    - host: plexrequests.cmdcentral.xyz
      http:
        paths:
          - backend:
              service:
                name: seerr
                port:
                  number: 5055
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - plexrequests.cmdcentral.xyz
      secretName: overseerr-tls
